[package]
name = "rublo"
version = "0.1.0"
authors = ["Andrea <a.g.baldan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "0.21.1"
fasthash = "0.4.0"
tokio = { version = "1", features = ["full"] }
