[package]
name = "rublo"
version = "0.1.0"
authors = ["Andrea <a.g.baldan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = { version = "1.0.1", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6.5", features = ["full"] }
tokio-stream = { version = "0.1" }
futures = { version = "0.3.0", features = ["thread-pool"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.13"
tracing = "0.1"
log = { version = "0.4.11", features = ["std"] }
bincode = "1.3.2"
gxhash = "3.4.1"
